--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "console.table": "^0.10.0",
     "index.js": "^0.0.3",
     "inquirer": "^8.2.0",
+    "mysql": "^2.18.1",
     "mysql2": "^2.3.3"
   }
 }
