--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "index.js": "^0.0.3",
     "inquirer": "^8.2.0",
     "mysql": "^2.18.1",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.15.0"
   }
 }
